--- a/src/components/main/news/News.css
+++ b/src/components/main/news/News.css
@@ -13,10 +13,11 @@
 }
 
 #background-reverse{
+    display: none;
     position: absolute;
-
+    top: 600px;
     width: 100%;
-    height: 600px;
+    min-height: 600px;
     object-fit: cover;
     transform: rotate(180deg);
     z-index: -2;
@@ -27,10 +28,4 @@
 .back-rev{
     display: flex;
     position: relative;
-}
-
-@media screen and (max-width: 1338px){
-    #background-reverse{
-        top: -600px;
-    }
 }
