--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -58,6 +58,7 @@
 
 .logoSubLinks{
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .logoSubLinks a{
@@ -78,4 +79,17 @@
 
 .logoSubLinks a:hover{
     box-shadow: 0px 0px 10px white;
+}
+
+.logoSubText{
+    text-shadow: 0px 0px 5px black;
+}
+
+.logoSubText a{
+    color: gray;
+    transition: 1s;
+}
+
+.logoSubText a:hover{
+    color: purple;
 }
