NEW HEADER LINKS
NEW FOOTER CSS

BURGER CSS IS IN HEADER CSS

HEADER TITLE IS uflaxderechteSVG.js

--- a/src/components/main/footer/Footer.css
+++ b/src/components/main/footer/Footer.css
@@ -8,3 +8,18 @@
     justify-content: space-between;
     width: 100%;
 }
+
+#Footer div{
+    padding: 1%;
+    width: 48%;
+    white-space: initial;
+}
+
+#Footer div:last-child{
+    border-left: white 1px solid;
+}
+
+#Footer *{
+    white-space: initial;
+    word-wrap: break-word
+}
