--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -4,7 +4,6 @@
     width: 100%;
     height: 600px;
     object-fit: cover;
-    object-position: 100% -100px;
     z-index: -2;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1.0) 50%, transparent 100%);
 }
@@ -63,7 +62,9 @@
 
 .logoSubLinks a{
     z-index: 10;
-    margin: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 10px;
     padding: 10px;
     border-radius: 10px;
     border: 1px white solid;
