--- a/src/components/main/header/Header.css
+++ b/src/components/main/header/Header.css
@@ -79,7 +79,7 @@
 
 .nav-menu{
     position: absolute;
-    display: flex;
+    display: none;
     right: -300px;
     top: 75px;
     gap: 0;
@@ -104,6 +104,7 @@
 
 .nav-menu.active{
     animation: displaymode_hamburger 0.5s forwards;
+    display: flex;
 }
 
 @keyframes displaymode_hamburger {
